--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -67,15 +67,13 @@ From the prefix [[mega-]].
 ===Etymology===
 {{suffix|meg|a|lang=eo}}.
 
-===Ordinal number===
+===Adjective===
 {{eo-head}}
 
 # {{label|eo|ordinal|neologism|rare}} [[millionth]]
 
 ====Synonyms====
 * {{l|eo|miliona}}
-
-[[Category:Esperanto numerals]]
 
 ----
 
