--- a/en/d/deiparous.777004.wikitext
+++ b/en/d/deiparous.777004.wikitext
@@ -7,5 +7,5 @@
 {{en-adj}}
 
 # {{lb|en|rare}} Giving birth to a [[god]] or [[goddess]].
-#* {{quote-book|title=To feed their hopes: a book of American women|year=1980|author=John B. Sanford|passage=Mother of God, deiparous Mary, not even her lineage is clear: her father may have been Joachim, a sheepman rich in flocks, and her mother the prophetess Anna (James the Less tells of these things), and right it is that their names when taken together spell Grace prepared by God, the which might well foretoken a Mary of David's royal race.}}
+#* {{quote-book|title=To feed their hopes: a book of American women|year=1980|author=John B. Sanford|passage=Mother of God, '''deiparous''' Mary, not even her lineage is clear: her father may have been Joachim, a sheepman rich in flocks, and her mother the prophetess Anna (James the Less tells of these things), and right it is that their names when taken together spell Grace prepared by God, the which might well foretoken a Mary of David's royal race.}}
 #* {{quote-book|title=Occultus Liber: A Novel by Neil Baker|author=Neil Baker|year=2014|passage=god sees a deiparous woman clothed with the sun, with the moon under her feet, standing with a newborn child and a dragon, holding a notarikon, ICH THY'S END, in a bed that is lawful to carry on in.}}
