--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -28,7 +28,7 @@ From {{etyl|enm|en}} *{{m|enm||quacken}}, {{m|enm|queken||to croak like a frog; 
 * Hungarian: {{t|hu|háp}}, {{t|hu|hápogás}}
 * Icelandic: {{t|is|andagagg|n}}, {{t|is|guss|n}}
 * Ido: {{t+|io|kroaso}}, {{t+|io|bramo}}
-* Irish: {{t|ga|vrác|n}}, {{t|ga|vác|m}}
+* Irish: {{t|ga|vác|m}}
 * Italian: {{t|it|qua qua|m}}
 {{trans-mid}}
 * Japanese: {{t|ja|ガー ガー|tr=gā-gā}}, {{t|ja|クェッ クェッ|tr=quek-quek}}, {{t|ja|クワッ クワッ|tr=quwak-quwak}}
