--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -47,6 +47,11 @@ From {{etyl|enm|en}} {{m|enm|attenden}}, {{m|enm|atenden}}, from {{etyl|fro|en}}
 |passage=In the eyes of Mr. Farquhar Fenelon Cooke the apotheosis of the Celebrity was complete. The people of Asquith were not only willing to '''attend''' the house-warming, but had been worked up to the pitch of eagerness. The Celebrity as a matter of course was master of ceremonies.}}
 #* '''1994''', {{w|Nelson Mandela}}, ''{{w|Long Walk to Freedom}}'', Abacus 2010, p. 20:
 #*: I '''attended''' a one-room school next door to the palace and studied English, Xhosa, history and geography.
+# {{label|en|intransitive|legal}} To go to (a place) for some purpose (with {{m|en|at}}).
+#* {{quote-web|author=Supreme Court of Canada|work=R. v. Côté|url=http://canlii.ca/t/fndv8|date=2011|accessdate=2016-05-08
+|passage=Around 12:15 a.m. patrolling officers Tremblay and Mathieu '''attended''' at the appellant’s home.}}
+#* {{quote-web|author=Prince Edward Island Court of Appeal|work=R. v. Yeo|url=http://canlii.ca/t/gnr68|date=2016|accessdate=2016-05-08
+|passage=There were a few errors in the testimony of [a civilian witness] which the trial judge noted – one, that they '''attended''' at the Fairhurst residence the day before the robbery, and two, that Wakelin was with them.}}
 # To be present with; to accompany; to be united or consequent to.
 #: {{ux|en|a measure '''attended''' with ill effects}}
 #* {{w|John Dryden}} (1631-1700)
