--- a/en/c/countdown.34096.wikitext
+++ b/en/c/countdown.34096.wikitext
@@ -61,7 +61,7 @@ From {{compound|count|down|lang=en}}.
 {{trans-bottom}}
 
 ===Verb===
-{{head|en|verb}}
+{{en-verb}}
 
 # {{rfv-sense|lang=en}} {{label|en|nonstandard}} To [[count down]].
 #* {{quote-book|title=Polarized fluorescence photobleaching for measuring fast rotational motion of cell surface receptors |author=Yifeng Yuan |year=1994  |passage=This was accomplished in the old system by polling a software variable representing the number of prebleach bin and issuing a software command to trigger the AOM once the variable has '''countdowned''' to zero. }}
