Correcting and adding translations es: <quack#38547303>

--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -77,7 +77,7 @@ From {{etyl|enm|en}} *{{m|enm||quacken}}, {{m|enm|queken||to croak like a frog; 
 * Portuguese: {{t+|pt|grasnar}}, {{t|pt|grasnir}}, {{t|pt|grassitar}}, {{t|pt|gracitar}}
 * Romanian: {{t+|ro|măcăi}}
 * Russian: {{t+|ru|кря́кать|impf}}, {{t+|ru|кря́кнуть|pf}}
-* Spanish: {{t-check|es|[[decir]] [[cuac]]}} <!-- was "[[decir]] [[cuac]]" - assumed sum-of-parts; if an idiom, remove the wikilinks to the individual words. see [[User:Kephir/gadgets/xte#Translation_fixing]] -->
+* Spanish: {{t+|es|graznar}}, {{t+|es|parpar}}
 * Swedish: {{t+|sv|kvacka}}
 * Turkish: {{t|tr|vaklamak}}
 {{trans-bottom}}
