--- a/en/1/1 Kings.801703.wikitext
+++ b/en/1/1 Kings.801703.wikitext
@@ -14,9 +14,13 @@
 ====Translations====
 {{trans-top|book of the Bible}}
 * Afrikaans: {{t|af|1 Konings}}, {{t|af|I Konings}}
+* Chinese:
+*: Cantonese: {{t|yue|列王紀上|sc=Hani}}, {{t|yue|列王纪上|tr=lit6 wong4 gei2 soeng6|sc=Hani}}
+*: Hakka: {{t|hak|列王紀上|sc=Hani}}, {{t|hak|列王纪上|tr=Lie̍t-vòng-ki-song|sc=Hani}}
+*: Mandarin: {{t+|cmn|列王紀上|sc=Hani}}, {{t+|cmn|列王纪上|tr=Lièwángjì Shàng|sc=Hani}}
+{{trans-mid}}
 * French: {{t|fr|1 Rois}}
 * Greek: {{t|el|Α' Βασιλειών}}, {{t|el|Βασιλείς Α'}}
-{{trans-mid}}
 * Irish: {{t|ga|Céad Leabhar na Ríthe|m}}, {{t|ga|1 Ríthe|m-p}}
 * Japanese: {{t|ja|列王記上|tr=retsuō kijō}}
 * Spanish: {{t|es|1 Reyes|m-p}}
