--- a/en/s/stiff upper lip.803114.wikitext
+++ b/en/s/stiff upper lip.803114.wikitext
@@ -5,7 +5,7 @@
 American in origin; earliest known use in 1815 [http://books.google.com/books?id=mZASAAAAIAAJ&pg=PA509&dq=%22stiff+upper+lip%22].
 
 ===Noun===
-{{en-noun|-|head=[[stiff]] [[upper]] [[lip]]}}
+{{en-noun}}
 
 # {{label|en|idiomatic}} The quality of being [[resolute]] and showing [[self-restraint]], [[stereotypical]]ly associated with the [[British]]; especially as ''keep a stiff upper lip''.
 #* '''1834''', [[w:Davy Crockett|David Crockett]], ''A Narrative of the Life of David Crockett'', [http://books.google.com/books?id=NjYDAAAAYAAJ&pg=PA130&dq=%22stiff+upper+lip%22 page 130]
