--- a/en/l/Laz.774545.wikitext
+++ b/en/l/Laz.774545.wikitext
@@ -4,7 +4,7 @@
 ===Proper noun===
 {{en-proper noun}}
 
-# A South-[[Caucasian]] language of Turkey and Caucasian [[Georgia]], related to [[Georgian]], [[Mingrelian]], and [[Svan]].
+# A [[Kartvelian]] [[language]] language of Turkey and Caucasian [[Georgia]], related to [[Georgian]], [[Mingrelian]], and [[Svan]].
 
 ====Translations====
 {{trans-top|language}}
