--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -83,7 +83,7 @@ From {{etyl|frm|en}} {{m|frm|advertissement||statement calling attention}}, comp
 * Interlingua: {{t|ia|annuncio}}, {{t|ia|publicitate}}, {{t|ia|reclamo}}, {{t|ia|propaganda}}
 * Italian: {{t+|it|annuncio|m}}, {{t+|it|pubblicità|f}}
 * Japanese: {{t+|ja|広告|tr=こうこく, kōkoku}}, {{t|ja|CM|tr=シーエム, shī-emu}}
-* Khmer: {{t-needed|km}}
+* Khmer: {{t+|km|ឃោសនា|tr=kʰousnaa, kʰousa’naa|sc=Khmr}}, {{t|km|ការផ្សាយពាណិជ្ជកម្ម|tr=kaa psaay pienɨc kam|sc=Khmr}}, {{t|km|ការផ្សាយ|tr=kaa psaay|sc=Khmr}}, {{t|km|ដំណឹងពាណិជ្ជកម្ម|tr=dɑmnəŋ pienɨc kam|sc=Khmr}} {{qualifier|on radio or TV}}
 * Korean: {{t+|ko|광고|sc=Hang}} ({{t+|ko|廣告|sc=Hani}})
 * Kyrgyz: {{t+|ky|жарнама}}
 {{trans-mid}}
