/* Noun */ +descend <at#38559937>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -738,6 +738,9 @@ From {{etyl|otk|tr}} ''at'', from {{etyl|trk-pro|tr}} {{m|trk-pro|*at}}, {{m|trk
 ====Declension====
 {{tr-noun-c|a|t|pred=+|poss=+}}
 
+====Descendants====
+* Greek: {{l|el|άτι|gloss=horse|g=m}}
+
 ===Verb===
 {{head|tr|verb form}}
 
