t+hy:[[{{t-needed}}]] t+ka:[[{{t-needed}}]] t+km:[[{{t-needed}}]] t+mn:[[{{t-needed}}]] t+th:[[{{t-needed}}]] t+lt:[[{{t-needed}}]] t+fa:[[{{t-needed}}]] ([[WT:EDIT|Assisted]]) <bend#38561408>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -73,6 +73,7 @@ From {{etyl|enm|en}} {{m|enm|benden}}, from {{etyl|ang|en}} {{m|ang|bendan||to b
 ====Translations====
 {{trans-top|to cause to shape into a curve}}
 * Arabic: {{t|ar|ثَنَى}}
+* Armenian: {{t-needed|hy}}
 * Belarusian: {{t|be|згіна́ць|impf|sc=Cyrl}}, {{t|be|гнуць|impf|sc=Cyrl}}
 * Bulgarian: {{t+|bg|извивам}}, {{t+|bg|превивам}}
 * Chinese:
@@ -82,6 +83,7 @@ From {{etyl|enm|en}} {{m|enm|benden}}, from {{etyl|ang|en}} {{m|ang|bendan||to b
 * Esperanto: {{t|eo|kurbigi}}, {{t+|eo|fleksi}}
 * Finnish: {{t+|fi|taivuttaa}}
 * French: {{t+|fr|courber}}
+* Georgian: {{t-needed|ka}}
 * German: {{t+|de|beugen}}
 * Greek: {{t+|el|λυγίζω}}
 * Hebrew: {{t|he|כופף|tr=koféf}}
@@ -89,6 +91,7 @@ From {{etyl|enm|en}} {{m|enm|benden}}, from {{etyl|ang|en}} {{m|ang|bendan||to b
 * Icelandic: {{t+|is|beygja}}
 * Italian: {{t+|it|curvare}}, {{t+|it|piegare}}
 * Japanese: {{t|ja|曲げる|tr=mageru}}
+* Khmer: {{t-needed|km}}
 * Korean: {{t+|ko|구부리다|sc=Kore}}
 * Kurdish:
 *: Sorani: {{t+|ku|چه‌ماندن}}
@@ -96,8 +99,11 @@ From {{etyl|enm|en}} {{m|enm|benden}}, from {{etyl|ang|en}} {{m|ang|bendan||to b
 * Latgalian: {{t|ltg|salīkt}}, {{t|ltg|puorlīkt}}
 * Latin: {{t|la|flecto}}, {{t|la|sinuō}}, {{t|la|curvo}}
 * Latvian: {{t|lv|saliekt}}
+* Lithuanian: {{t-needed|lt}}
 * Maori: {{t|mi|ngawaki}} {{qualifier|refers to knees}}, {{t|mi|whakapiko}}, {{t|mi|whatiwhati}} {{qualifier|Refers to bending the legs when running}}
+* Mongolian: {{t-needed|mn}}
 * Norwegian: {{t+|no|bøye}}
+* Persian: {{t-needed|fa}}
 * Polish: {{t+|pl|zgiąć|pf}}, {{t+|pl|zginać|impf}}, {{t+|pl|giąć|impf}}
 * Portuguese: {{t+|pt|dobrar}}, {{t+|pt|curvar}}
 * Romanian: {{t+|ro|îndoi}}, {{t+|ro|curba}}
@@ -109,6 +115,7 @@ From {{etyl|enm|en}} {{m|enm|benden}}, from {{etyl|ang|en}} {{m|ang|bendan||to b
 * Spanish: {{t+|es|doblar}}, {{t+|es|curvar}}
 * Swahili: {{t+|sw|pinda}}, {{t+|sw|kunja}}
 * Swedish: {{t+|sv|böja}}
+* Thai: {{t-needed|th}}
 * Turkish: {{t+|tr|bükmek}}
 * Ukrainian: {{t|uk|згина́ти|impf|sc=Cyrl}}, {{t|uk|гну́ти|impf|sc=Cyrl}}
 * Vietnamese: {{t+|vi|uốn cong}}
