--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -32,6 +32,9 @@ From {{etyl|fr|en}} {{m|fr|ajustement}}, or else {{suffix|adjust|ment|lang=en}}.
 {{trans-top|action of adjusting}}
 * Finnish: {{t|fi|säätäminen}}, {{t|fi|säätö}}
 {{trans-mid}}
+* Norwegian: 
+*: Bokmål: {{t|nb|justering|m|f}}
+*: Nynorsk: {{t|nn|justering|f}}
 {{trans-bottom}}
 
 {{trans-top|result of adjusting, small change}}
@@ -53,14 +56,17 @@ From {{etyl|fr|en}} {{m|fr|ajustement}}, or else {{suffix|adjust|ment|lang=en}}.
 * Hebrew: {{t+|he|כִּוּוּן|m}}
 * Hungarian: {{t+|hu|beállítás}}
 * Interlingua: {{t|ia|adjustamento}}
-{{trans-mid}}
 * Irish: {{t|ga|gabháil|m}}, {{t|ga|ceartú|m}}, {{t|ga|inleadh|m}}
 * Italian: {{t+|it|adattamento|m}}, {{t+|it|inserimento|m}}
+{{trans-mid}}
 * Japanese: {{t+|ja|調整|tr=ちょうせい, chōsei|sc=Jpan}}, {{t+|ja|調節|tr=ちょうせつ, chōsetsu|sc=Jpan}}
 * Korean: {{t-needed|ko}}
 * Kyrgyz: {{t+|ky|жөнгө салуу}}, {{t+|ky|ыңгайлаштыруу}}, {{t|ky|ылайыктоо}}
 * Latin: {{t|la|accommodātiō|f}}
 * Maori: {{t|mi|whakarerekētanga}}
+* Norwegian: 
+*: Bokmål: {{t|nb|justering|m|f}}
+*: Nynorsk: {{t|nn|justering|f}}
 * Polish: {{t+|pl|ustawienie|n}}, {{t|pl|regulacja|f}}
 * Portuguese: {{t|pt|ajustamento|m}}, {{t+|pt|ajuste|m}}
 * Romanian: {{t+|ro|ajustare|f}}, {{t+|ro|acomodare|f}}
