--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -173,7 +173,9 @@ There are two main theories for the origin of {{etyl|fro|en}} {{m|fro|ermine}}. 
 [[pl:ermine]]
 [[ro:ermine]]
 [[ru:ermine]]
+[[fi:ermine]]
 [[ta:ermine]]
 [[te:ermine]]
 [[vi:ermine]]
 [[zh:ermine]]
+[[tr:ermine]]
