t+th:[[เชลยศึก]] ([[WT:EDIT|Assisted]]) <prisoner of war#38574643>

--- a/en/p/prisoner of war.4326.wikitext
+++ b/en/p/prisoner of war.4326.wikitext
@@ -37,6 +37,7 @@
 * Spanish: {{t|es|prisionero de guerra|m}}
 * Swedish: {{t+|sv|krigsfånge}}
 * Telugu: {{t|te|యుద్ధ ఖైదీ|tr=yuddha khaidee}}
+* Thai: {{t|th|เชลยศึก|sc=Thai}}
 * Ukrainian: {{t+|uk|бранець|m|tr=bránec'}}
 * Vietnamese: {{t+|vi|tù binh}}
 * Volapük: {{t|vo|kligafanäböpäb}}
