--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -72,24 +72,30 @@ From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, fro
 ====Translations====
 {{trans-top|''transitive'' to tie or fasten tightly together, with a cord, band, ligature, chain, etc.}}
 * Afrikaans: {{t|af|bind}}
+* Armenian: {{t-needed|hy}}
+* Basque: {{t-needed|eu}}
 * Chinese:
 *: Min Dong: {{t|cdo|缚|tr=buok|sc=Hani}}
 * Danish: {{t+|da|binde}}
 * Dutch: {{t+|nl|binden}}
+* Esperanto: {{t-needed|eo}}
 * Faroese: {{t|fo|binda}}
 * French: {{t+|fr|lier}}
+* Georgian: {{t-needed|ka}}
 * German: {{t+|de|binden}}
 *: Old High German: {{t|goh|bintan}}
 *: Middle High German: {{t|gmh|binden}}
 * Gothic: {{t|got|𐌱𐌹𐌽𐌳𐌰𐌽|sc=Goth}}
 * Icelandic: {{t+|is|binda}}
+* Khmer: {{t-needed|km}}
 * Low German:
 *: German Low German: {{t+|nds-de|binnen}}
 * Maori: {{t|mi|rona}}, {{t|mi|whakarorerore}}
+{{trans-mid}}
 * Middle Dutch: {{t|dum|binden}}
 * Middle English: {{t|enm|binden}}
 * Middle Low German: {{t|gml|binden}}
-{{trans-mid}}
+* Mongolian: {{t-needed|mn}}
 * North Frisian:
 *: Föhr-Amrum and Sylt: {{t|frr|binj}}
 *: Helgoland: {{t|frr|bin}}
@@ -104,6 +110,8 @@ From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, fro
 * Russian: {{t+|ru|свя́зывать|impf}}, {{t+|ru|свя́зать|pf}}
 * Saterland Frisian: {{t|stq|biende}}
 * Swedish: {{t+|sv|binda}}
+* Thai: {{t-needed|th}}
+* Vietnamese: {{t-needed|vi}}
 * West Frisian: {{t|fy|bine}}
 {{trans-bottom}}
 {{trans-top|''transitive'' connect}}
