--- a/en/g/genet.746610.wikitext
+++ b/en/g/genet.746610.wikitext
@@ -29,6 +29,7 @@ From {{etyl|xno|en}} {{m|fro|genette}}, {{etyl|frm|en}} {{m|frm|genette}}, {{m|f
 * Finnish: {{t+|fi|genetti}}
 * French: {{t+|fr|genette|f}}
 {{trans-mid}}
+* Georgian: {{t|ka|ვივერა|sc=Geor}}
 * German: {{t|de|Genette|n}}, {{t|de|Ginsterkatze|f}}
 * Hungarian: {{t|hu|petymeg}}
 * Italian: {{t|it|genetta|f}}
