--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -195,7 +195,7 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 {{trans-see|slang: a suit|suit}}
 
 {{checktrans-top}}
-* {{ttbc|my}}: {{t-check|ဝီစီ}}
+* {{ttbc|my}}: {{t-check|my|ဝီစီ}}
 * {{ttbc|it}}: {{t-check|it|fischietto}}, {{t-check|it|fischio}}
 * {{ttbc|ko}}: {{t|ko|호르라기}}
 {{trans-mid}}
