--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -158,7 +158,7 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare Middle Dutch {{m|d
 * Oriya: {{t|or|ବୁଦ୍ ବୁଦ୍|tr=bud bud|sc=Orya}}
 * Ossetian: {{t|os|къуыпсы|sc=Cyrl}}, {{t|os|таппуз|sc=Cyrl}}
 * Pashto: {{t+|ps|حباب|m|tr=ḥubāb|sc=ps-Arab}}
-* Persian: {{t+|fa|حباب|tr=hebâb|sc=fa-Arab}}
+* Persian: {{t+|fa|حباب|tr=hobâb|sc=fa-Arab}}
 * Polish: {{t+|pl|bańka|f}}
 * Portuguese: {{t+|pt|bolha|f}}
 * Punjabi: {{t|pa|ਬੁਲਬੁਲਾ|m|tr=bulabulā|sc=Guru}}
