--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -21,14 +21,14 @@ Possibly from {{etyl|frm|en}} {{m|frm|caper||to capture}}, from {{etyl|la|en}} {
 ====Verb====
 {{en-verb|copp}}
 
-# {{label|en|transitive|formerly|_|dialect|now|_|informal}} to [[obtain]], to purchase (as in drugs), to get hold of, to [[take]]
+# {{label|en|transitive|formerly|_|dialect|now|_|informal}} to [[obtain]], to purchase (as in drugs), to get hold of, to [[take]].
 #* '''2005''', Martin Torgoff, ''Can't Find My Way Home'', Simon &amp; Schuster, page 10:
 #*: Heroin appeared on the streets of our town for the first time, and Innie watched helplessly as his sixteen-year-old brother began taking the train to Harlem to '''cop''' smack.
 # {{label|en|transitive}} to (be forced to) [[take]]; to [[receive]]; to [[shoulder]]; to [[bear]], especially [[blame]] or [[punishment]] for a particular instance of [[wrongdoing]].
 #: When caught, he would often '''cop''' a vicious blow from his father
 # {{label|en|transitive|trainspotting|slang}} to see and record a [[railway]] [[locomotive]] for the first time.
-# {{label|en|transitive}} to [[steal]]
-# {{label|en|transitive}} to [[adopt]]
+# {{label|en|transitive}} to [[steal]].
+# {{label|en|transitive}} to [[adopt]].
 #: ''No need to '''cop''' an attitude with me, junior.''
 # {{label|en|intransitive|usually with "to"|slang}} to [[admit]], especially to a crime.
 #: ''I already '''copped''' to the murder. What else do you want from me?''
