--- a/en/d/dormouse.8238.wikitext
+++ b/en/d/dormouse.8238.wikitext
@@ -40,6 +40,7 @@ The word is sometimes considered to come from an {{etyl|xno|-}} derivative of {{
 * Friulian: {{t|fur|glîr}}
 * Galician: {{t|gl|leirón cincento}}
 * German: {{t+|de|Bilch|m}}, {{t+|de|Schläfer|m}}, {{t+|de|Schlafmaus|f}}, {{t+|de|Siebenschläfer|m}}
+*: Alemannic German: {{t|gsw|Haselmuus|f}}
 * Greek: {{t|el|δασομυωξός|m}}
 * Hungarian: {{t+|hu|pele}}
 * Icelandic: {{t|is|heslimús}}
