===Etymology 2===  ====Noun==== {{en-noun|s|at}}  # {{alt form|att|lang=en}} {{qual|Laos currency unit|lang=en}} <at#38610543>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -2,17 +2,17 @@
 ==English==
 {{wikipedia|AT}}
 
-===Etymology===
+===Etymology 1===
 From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{inh|en|gem-pro|*at||at, near, to}}, from {{inh|en|ine-pro|*ád||near, at}}. Cognate with {{etyl|sco|-}} {{m|sco|at||at}}, {{etyl|frr|-}} {{m|frr|äät}}, {{m|frr|äit}}, {{m|frr|et}}, {{m|frr|it||at}}, {{etyl|da|-}} {{m|da|at||to}}, {{etyl|fo|-}} {{m|fo|at||at, to, toward}}, {{etyl|no|-}} {{m|no|åt||to}}, {{etyl|sv|-}} {{m|sv|åt||for, toward}}, {{etyl|is|-}} {{m|is|að||to, towards}}, {{etyl|got|-}} {{m|got|𐌰𐍄||at}}, {{etyl|la|-}} {{m|la|ad||to, near}}.
 
-===Pronunciation===
+====Pronunciation====
 * {{qualifier|stressed}} {{enPR|ăt}}, {{IPA|/æt/|lang=en}}
 * {{qualifier|unstressed}} {{IPA|/ət/|lang=en}}
 * {{audio|en-us-at.ogg|Audio (US)|lang=en}}
 * {{rhymes|æt|lang=en}}
 * {{homophones|lang=en|@}}
 
-===Preposition===
+====Preposition====
 {{en-prep}}
 
 # [[in|In]] or very [[near]] a particular [[place]].
@@ -49,14 +49,14 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 #: ''She studied '''at''' her chemistry notes.''
 #: ''He slipped '''at''' marksmanship over his extended vacation.''
 
-====Usage notes====
+=====Usage notes=====
 * ''He threw the ball to me'' &mdash; (so I could catch it).
 * ''He threw the ball at me'' &mdash; (trying to hit me with it).
 
 * ''He talked to her'' &mdash; (conversationally).
 * ''He shouted at her'' &mdash; (aggressively).
 
-====Translations====
+=====Translations=====
 {{trans-top|in or very near a particular place}}
 * Arabic: {{t|ar|عِنْد}}
 *: Egyptian Arabic: {{t|arz|عند|tr=ʿand|sc=Arab}}
@@ -226,12 +226,12 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 * Walloon: {{t+|wa|a}}
 {{trans-bottom}}
 
-===Noun===
+====Noun====
 {{en-noun}}
 
-# the [[@]] symbol.
+# The [[@]] symbol.
 
-====Translations====
+=====Translations=====
 {{trans-top|the @ symbol}}
 * Armenian: {{t|hy|շնիկ}}
 * Georgian: {{t|ka|ძაღლუკა}}
@@ -244,6 +244,13 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 * Swedish: {{t+|sv|snabel-a|n}}
 * Vietnamese: {{t|vi|a còng}} {{qualifier|Northern}}, {{t|vi|a móc}} {{qualifier|Southern}}
 {{trans-bottom}}
+
+===Etymology 2===
+
+====Noun====
+{{en-noun|s|at}}
+
+# {{alt form|att|lang=en}} {{qual|Laos currency unit|lang=en}}
 
 ===Statistics===
 * {{rank|you|not|be|20|at|by|on|her}}
