--- a/en/p/prisoner of war.4326.wikitext
+++ b/en/p/prisoner of war.4326.wikitext
@@ -17,7 +17,7 @@
 * Finnish: {{t+|fi|sotavanki}}
 * French: {{t+|fr|prisonnier de guerre|m}}
 * German: {{t+|de|Kriegsgefangener|m}}, {{t|de|Kriegsgefangene|f}}
-* Greek: {{t|el|αιχμάλωτος πολέμου}}
+* Greek: {{t|el|αιχμάλωτος πολέμου|m|f}}
 * Icelandic: {{t|is|stríðsfangi|m}}
 * Indonesian: {{t|id|tahanan perang}}
 * Interlingua: {{t|ia|prisionero de guerra}}
