--- a/en/r/random walk.801871.wikitext
+++ b/en/r/random walk.801871.wikitext
@@ -9,8 +9,9 @@
 ====Translations====
 {{trans-top|stochastic path}}
 * Finnish: {{t|fi|satunnaiskulku}}
-* Hungarian: {{t|hu|véletlen bolyongás}}
+* German: {{t|de|Irrfahrt}}, {{t|de|Zufallsbewegung}}
 {{trans-mid}}
+* Hungarian: {{t|hu|véletlen bolyongás}}
 {{trans-bottom}}
 
 ====Synonyms====
