--- a/en/x/X factor.802821.wikitext
+++ b/en/x/X factor.802821.wikitext
@@ -25,7 +25,7 @@
 * Chinese: 
 *: Mandarin: {{t-needed|cmn}}
 {{trans-mid}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t|fi|tuntematon tekijä}}
 * Russian: {{t-needed|ru}}
 {{trans-bottom}}
 
@@ -33,7 +33,7 @@
 * Chinese: 
 *: Mandarin: {{t-needed|cmn}}
 {{trans-mid}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t|fi|erityislahjakkuus}}
 * Russian: {{t-needed|ru}}
 {{trans-bottom}}
 
@@ -41,7 +41,7 @@
 * Chinese: 
 *: Mandarin: {{t-needed|cmn}}
 {{trans-mid}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t|fi|hyytymistekijä X}}
 * Russian: {{t-needed|ru}}
 {{trans-bottom}}
 
