/* Dutch */ +Etymology <puit#38625941>

--- a/en/p/puit.801598.wikitext
+++ b/en/p/puit.801598.wikitext
@@ -3,6 +3,9 @@
 ===Pronunciation===
 * {{audio|Nl-puit.ogg|Audio|lang=nl}}
 
+===Etymology===
+From {{inh|nl|dum|puut||frog}}, from {{inh|nl|gem-pro}} {{m|gem-pro|*put-}}, {{m|gem-pro|*pud-||to swell}}. Compare dialectal English {{m|en|pod||belly}}, {{m|en|pout}}, Swedish {{m|sv|puta||to be swollen}}. Akin to French {{m|fr|bouder}}.
+
 ===Noun===
 {{nl-noun|m|-en|puitje}}
 
@@ -10,11 +13,11 @@
 
 ====Synonyms====
 * {{l|nl|kikker}} {{g2|m}}
+* {{label|nl|archaic}} {{l|nl|vors}} {{g2|m}}
 
 ====Derived terms====
 * {{l|nl|puiten}} (verb)
 * {{l|nl|puitebloot}} (adjective)
-* etc.
 
 ====Verb====
 # simple imperative and singular present imperfect forms of [[puiten]]
