--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -146,6 +146,7 @@ From {{etyl|ang|en}} {{m|ang|oter}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*utraz
 {{trans-top|hairy man}}
 * Japanese: {{t+|ja|熊|tr=[[くま]], kuma}}
 {{trans-mid}}
+* Navajo: {{t|nv|ditłʼoiitsʼózí}}
 * Turkish: {{qualifier|literally "bear"}} {{t+|tr|ayı}}
 {{trans-bottom}}
 
