--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -101,7 +101,7 @@ From {{etyl|ang|en}} {{m|ang|oter}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*utraz
 * Ossetian:
 *: Digor: {{t|os|урдӕ|sc=Cyrl}}
 *: Iron: {{t|os|уырд|sc=Cyrl}}
-* Persian: {{t|fa|سمور آبی|tr=samur-e âbi|sc=fa-Arab}}
+* Persian: {{t|fa|سمور آبی|tr=samur-e âbi|sc=fa-Arab}}, {{t|fa|اودر|tr=ūdar}} (Archaic)
 * Pirahã: {{t|myp|pibaóí}}
 * Polish: {{t+|pl|wydra|f}}
 * Portuguese: {{t+|pt|lontra}}
