/* Translations */ Norwegian - : brøk is usually used for ratio,  not too  often for å part of som whole <fraction#38631386>

--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -79,7 +79,7 @@ From {{etyl|enm|en}} {{m|enm|fraccioun||a breaking}}, from {{etyl|xno|en}}, from
 * Latvian: {{t+|lv|daļskaitlis|m}}
 * Macedonian: {{t|mk|дел|m|tr=del}}, {{t|mk|делче|n|tr=délče}}
 {{trans-mid}}
-* Norwegian: {{t|no|andel|m}}, {{t+|no|brøkdel|m}}, {{t+|no|brøk|m}}; {{t|no|fraksjon|m}}
+* Norwegian: {{t|no|andel|m}}, {{t+|no|brøkdel|m}}; {{t|no|fraksjon|m}}
 * Polish: {{t+|pl|ułamek|m}}, {{t+|pl|cząstka|f}}
 * Portuguese: {{qualifier|Brazil}} [[fração]] {{g|f}}, {{qualifier|Portugal}} [[fracção]] {{g|f}}
 * Romanian: {{t+|ro|fracție}}
