/* Translations */ Norwegian± (fraksjon) <fraction#38631396>

--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -79,7 +79,7 @@ From {{etyl|enm|en}} {{m|enm|fraccioun||a breaking}}, from {{etyl|xno|en}}, from
 * Latvian: {{t+|lv|daļskaitlis|m}}
 * Macedonian: {{t|mk|дел|m|tr=del}}, {{t|mk|делче|n|tr=délče}}
 {{trans-mid}}
-* Norwegian: {{t|no|andel|m}}, {{t+|no|brøkdel|m}}; {{t|no|fraksjon|m}}
+* Norwegian: {{t|no|andel|m}}, {{t+|no|brøkdel|m}}
 * Polish: {{t+|pl|ułamek|m}}, {{t+|pl|cząstka|f}}
 * Portuguese: {{qualifier|Brazil}} [[fração]] {{g|f}}, {{qualifier|Portugal}} [[fracção]] {{g|f}}
 * Romanian: {{t+|ro|fracție}}
@@ -108,7 +108,7 @@ From {{etyl|enm|en}} {{m|enm|fraccioun||a breaking}}, from {{etyl|xno|en}}, from
 * Japanese: {{t+|ja|分数|tr=bunsū}}
 {{trans-mid}}
 * Macedonian: {{t|mk|дропка|f|tr=drópka}}
-* Norwegian: {{t+|no|brøk|m}}, {{t|no|fraksjon|m}}
+* Norwegian: {{t+|no|brøk|m}}
 * Persian: {{t+|fa|کسر}}
 * Polish: {{t+|pl|ułamek|m}}
 * Portuguese: {{qualifier|Brazil}} [[fração]] {{g|f}}, {{qualifier|Portugal}} [[fracção]] {{g|f}}
@@ -126,6 +126,7 @@ From {{etyl|enm|en}} {{m|enm|fraccioun||a breaking}}, from {{etyl|xno|en}}, from
 {{trans-top|chemistry: component separated by fractionation}}
 * Bulgarian: {{t+|bg|фракция|f|sc=Cyrl}}
 * Finnish: {{t+|fi|jae}}
+* Norwegian: {{t|no|fraksjon|m}}
 {{trans-mid}}
 * Romanian: {{t+|ro|fracțiune|f}}
 * Russian: {{t+|ru|фра́кция|f}}
