--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -283,7 +283,7 @@ From {{etyl|bat-pro|lv}} {{m|ine-bsl-pro|*bet}}, from {{etyl|ine-pro|lv}} {{m|in
 ==Lithuanian==
 
 ===Etymology===
-Cognate with {{etyl|lv|-}} {{m|lv|bet}}. From {{m|lt|bè||without}} + particle ''-t''. This particle comes from {{m|lt|tè||let, may it be}}, compare {{m|lt|nèt||even}} < {{m|lt|nete}}.
+Cognate with {{etyl|lv|-}} {{m|lv|bet}}. From {{m|lt|bè||without}} + particle ''-t''. This particle comes from {{m|lt|tè||let, may it be}}, compare {{m|lt|nèt||even}} < {{m|lt|nete}}. May better be explained deriving it from ''be-'', as of {{der|gem-pro|ine-pro||*bʰeuH-}}, ''e''-grade of {{m|ine-pro|*bʰuH-||to grow, become, come into being, appear}} ({{etyl|lt|-}} {{m|lt|būti||to be}}), followed by third-person singular inflection ''-t'' (as in {{etyl|lt|-}} {{m|lt|esti||yra}}).
 
 ===Pronunciation===
 * {{IPA|/bʲɛt/|lang=lt}}
