--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -208,7 +208,7 @@ From {{inh|fro|la|domina}}.
 # {{l|en|lady}}; {{l|en|woman}}
 
 ====Usage notes====
-* Unlike in modern French, ''[[fam#Old French|fam]]'' usually refers to a {{l|en|wife}}, while ''dame'' refers to a {{l|en|woman}}.
+* Unlike in modern French, ''[[fame#Old French|fame]]'' usually refers to a {{l|en|wife}}, while ''dame'' refers to a {{l|en|woman}}.
 
 ====Descendants====
 * English: {{l|en|dame}}
