--- a/en/d/doncella.803303.wikitext
+++ b/en/d/doncella.803303.wikitext
@@ -16,7 +16,7 @@
 ==Spanish==
 
 ===Etymology===
-From a {{inh|es|VL.|*domnicella}} (compare {{etyl|fr|-}} {{m|fr|demoiselle}}), based on {{inh|es|la|domina||lady, mistress}}.
+From a {{inh|es|VL.|*domnicella}} (cf. Portuguese {{m|pt|donzela}}, Old Provençal {{l|pro|donçela}}, {{etyl|fr|-}} {{m|fr|demoiselle}}), based on {{inh|es|la|domina||lady, mistress}}.
 
 ===Pronunciation===
 * {{a|Castilian}} {{IPA|/donˈθe.ʎa/|lang=es}}
