--- a/en/d/doncella.803303.wikitext
+++ b/en/d/doncella.803303.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-{{bor|en|es|maid}}. Compare {{m|en|damsel}}.
+{{bor|en|es|doncella|maid}}. Compare {{m|en|damsel}}.
 
 ===Noun===
 {{en-noun}}
