--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -292,7 +292,8 @@ Cognate with {{etyl|lv|-}} {{m|lv|bet}}. From {{m|lt|bè||without}} + particle '
 {{head|lt|conjunction|head=bèt}}
 
 # {{lb|lt|adversative}} [[but]], [[yet]], [[though]] {{gloss|introduces an idea [[contrary]] to or a [[concession]] to the previous statement}}
-#: ''{{m|lt|kentėti|Kenčia}} dalis, '''bet''' užtai tau daugiau lieka.'' - Some suffer, in turn there leaves more for you.
+#: ''{{m|lt|norėti|Nóriu}}, '''bèt''' {{m|lt|galėti|negaliù}}.'' - I want to, '''but''' I can't.
+#: ''{{m|lt|paskutinis|Paskutìnis}}, '''bèt''' {{m|lt|nè}} {{m|lt|prastas|prasčiáusias}}'' - Last '''but''' not least
 
 ===Particle===
 {{head|lt|particle|head=bet}} (''unstressed'')
