/* Verb */ RFV passed <countdown#38661941>

--- a/en/c/countdown.34096.wikitext
+++ b/en/c/countdown.34096.wikitext
@@ -63,7 +63,7 @@ From {{compound|count|down|lang=en}}.
 ===Verb===
 {{en-verb}}
 
-# {{rfv-sense|lang=en}} {{label|en|nonstandard}} To [[count down]].
+# {{label|en|nonstandard}} To [[count down]].
 #* {{quote-book|title=Polarized fluorescence photobleaching for measuring fast rotational motion of cell surface receptors |author=Yifeng Yuan |year=1994  |passage=This was accomplished in the old system by polling a software variable representing the number of prebleach bin and issuing a software command to trigger the AOM once the variable has '''countdowned''' to zero. }}
 #* {{quote-book|title=Cluck |author=Stephen Mark Cox |year=2000  |passage=Time measures itself out in a series of diminishing peristaltic ticks, '''countdowning''' slowly towards the miracle of Ignition. }}
 #* {{quote-book|title=Firewater |author=Edward Stone Cohen |year=2003  |page=129 |ISBN=1888451432 |passage=Whole families stood gawking at the massive statue, '''countdowning''' the five remaining minutes to the big one.  }}
