--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -125,12 +125,15 @@ From {{etyl|enm|en}} {{m|enm|staf}}, from {{etyl|ang|en}} {{m|ang|stæf}}, from 
 {{trans-bottom}}
 
 {{trans-top|employees of a business}}
+* Armenian: {{t-needed|hy}}
+* Basque: {{t-needed|eu}}
 * Catalan: {{t+|ca|staff|m}}, {{t+|ca|plantilla|f}}
 * Chinese:
 *: Mandarin: {{t|cmn|員工|sc=Hani}}, {{t+|cmn|员工|tr=yuángōng|sc=Hani}}, {{t+|cmn|人員|sc=Hani}}, {{t+|cmn|人员|tr=rényuán|sc=Hani}}, {{t+|cmn|工作人員|sc=Hani}}, {{t|cmn|工作人员|tr=gōngzuò rényuán|sc=Hani}}
 * Czech: {{t|cs|personál|m}}
 * Danish: {{t|da|stab|c}}, {{t+|da|personale|n}}
 * Dutch: {{t+|nl|medewerkers|p}}, {{t+|nl|personeel|n}}
+* Esperanto: {{t-needed|eo}}
 * Finnish: {{t+|fi|henkilöstö}}, {{t+|fi|henkilökunta}}
 * French: {{t+|fr|personnel|m}}
 * Georgian: {{t+|ka|შტატი}}, {{t|ka|პერსონალი}}
@@ -140,10 +143,12 @@ From {{etyl|enm|en}} {{m|enm|staf}}, from {{etyl|ang|en}} {{m|ang|stæf}}, from 
 * Irish: {{t+|ga|foireann|f}}
 * Italian: {{t+|it|personale|m}}, {{t+|it|organico|m}}
 * Japanese: {{t+|ja|人員|tr=じんいん, jin'in|sc=Jpan}}, {{t+|ja|スタッフ|tr=sutaffu|sc=Jpan}}
+* Khmer: {{t-needed|km}}
 * Lao: {{t|lo|ພະນັກງານ|sc=Laoo}}
-* Macedonian: {{t|mk|персонал|m|tr=personál}}, {{t|mk|кадар|m|tr=kádar}}
 {{trans-mid}}
+* Macedonian: {{t|mk|персонал|m|tr=personál}}, {{t|mk|кадар|m|tr=kádar}}
 * Malay: {{t|ms|kakitangan}}
+* Mongolian: {{t-needed|mn}}
 * Norwegian: {{t|no|personale}}
 *: Bokmål: {{t|nb|ansatte}}
 * Persian: {{t+|fa|پرسنل|tr=personel|sc=fa-Arab}}, {{t+|fa|کادر|tr=kâdr|sc=fa-Arab}}
