--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -3,7 +3,7 @@
 {{wikipedia|dab=sir (disambiguation)}}
 
 ===Etymology===
-From {{etyl|enm|en}} {{m|enm|sir}}, from {{etyl|fro|en}} {{m|fro|sire||master, sir, lord}}, from {{etyl|la|en}} {{m|la|senior||[[older]], [[elder]]}}, from {{m|la|senex||old}}. Compare [[sire]], [[signor]], [[seignior]], [[señor]].
+From {{inh|en|enm|sir}}, a {{bor|en|fro|sire||master, sir, lord|nocap=1}}, from {{der|en|la|senior||[[older]], [[elder]]}}, from {{m|la|senex||old}}. Compare [[sire]], [[signor]], [[seignior]], [[señor]].
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/sɜː(ɹ)/|lang=en}}
