/* Ido */ cat <qua#38671439>

--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -105,7 +105,7 @@ From {{etyl|la|en}} {{m|la|qua||in the capacity of}}.
 ===Determiner===
 {{head|io|determiner}}
 
-# {{label|io|interrogative adjective}} [[what]]
+# {{label|io|interrogative determiner}} [[what]]
 #: {{ux|io|'''Qua''' kamizo vu portos?|'''What''' shirt are you going to wear?|inline=1}}
 
 ====Derived terms====
@@ -123,6 +123,7 @@ From {{etyl|la|en}} {{m|la|qua||in the capacity of}}.
 
 [[Category:Ido interrogative pronouns]]
 [[Category:Ido relative pronouns]]
+[[Category:Ido interrogative determiners]]
 [[Category:Ido correlatives]]
 
 ----
