t+sms:[[puõiddi]] ([[WT:EDIT|Assisted]]) <ermine#38680846>

--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -84,6 +84,7 @@ There are two main theories for the origin of {{etyl|fro|en}} {{m|fro|ermine}}. 
 *: Cyrillic: {{t|sh|хермелин|m|sc=Cyrl}}, {{t|sh|зердав|m|sc=Cyrl}}
 *: Roman: {{t+|sh|hermelin|m}}, {{t+|sh|zerdav|m}}
 * Shor: {{t|cjs|ас|tr=as}}
+* Skolt Sami: {{t|sms|puõiddi}}
 * Slovak: {{t|sk|hranostaj|m}}
 * Slovene: {{t+|sl|hermelin|m}}
 * Spanish: {{t+|es|armiño|m}}
