--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-From the prefix [[mega-]].
+From {{etyl|grc|en}} {{m|grc|μέγας||great, large, mighty}}
 
 ===Pronunciation===
 * {{IPA|/ˈmɛɡə/|lang=en}}
