--- a/en/r/ready-made.741519.wikitext
+++ b/en/r/ready-made.741519.wikitext
@@ -34,6 +34,7 @@
 * Chinese:
 *: Mandarin: {{t|cmn|現成|alt=現成的|sc=Hani}}, {{t+|cmn|现成|alt=现成的|tr=xiànchéng de|sc=Hani}}
 {{trans-mid}}
+* Dutch: {{t|nl|kant en klaar}}
 * Finnish: {{t+|fi|valmis|alt=valmis-}}
 * French: {{t+|fr|tout fait}}
 {{trans-bottom}}
