--- a/en/b/baculovirus.775629.wikitext
+++ b/en/b/baculovirus.775629.wikitext
@@ -1,6 +1,6 @@
 ==English==
 {{wikipedia}}
-[[Image:Baculovirus.jpg|thumb|[[occlusion body|Occlusion body]] of a [[baculovirus]], ''[[Nucleopolyhedrovirus]]'' sp.]]
+[[Image:Baculovirus.jpg|thumb|[[occlusion body|Occlusion body]] of a [[baculovirus]], {{taxlink|Nucleopolyhedrovirus|genus|noshow=1}} sp.]]
 
 ===Etymology===
 {{prefix|baculo|virus|lang=en}}, from {{etyl|la|en}} {{m|la|baculum||rod}}.
