--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -411,9 +411,18 @@ From {{inh|ga|sga|att||swelling, protuberance, tumour}}.
 {{head|ga|noun|g=m|genitive as substantive|ait|genitive as verbal noun|ata|plural|atanna}}
 
 # [[swelling]]
-#: {{ux|ga|Tá '''at''' i lámh m’iníne.|My daughter has a swelling on her hand.}}
-#: {{ux|ga|Tá seacht '''n-at''' ina mhuineál.|He has seven swellings on his neck.}}
-#: {{ux|ga|Cuir do lámh in uisce leis an '''t-at''' a maolú.|Put your hand in water to reduce the swelling.}}
+#* {{RQ:ga-Finck|II|11}}
+#*: ''tā '''at''' ə l̄āv m inīnə.''
+#*:: {{small|''conventional orthography:''}} {{l|ga||Tá '''at''' i lámh m’iníne.}}
+#*::: My daughter has a swelling on her hand.
+#* {{RQ:ga-Finck|II|11}}
+#*: ''tā šȧxt '''n-at''' i n-ə wunāl.''
+#*:: {{small|''conventional orthography:''}} {{l|ga||Tá seacht '''n-at''' ina mhuineál.}}
+#*::: He has seven swellings on his neck.
+#* {{RQ:ga-Finck|II|11}}
+#*: ''kiŕ də lāv ə n̄-isḱə leš n̥ '''t-at''' ə wȳlū.''
+#*:: {{small|''conventional orthography:''}} {{l|ga||Cuir do lámh in uisce leis an '''t-at''' a maolú.}}
+#*::: Put your hand in water to reduce the swelling.
 # {{verbal noun of|at|lang=ga}}
 
 =====Declension=====
@@ -426,8 +435,14 @@ From {{inh|ga|sga|attaid||swells, dilates, increases|pos=v}}, from {{m|sga|att||
 {{ga-verb|pres=atann|fut=atfaidh|vn=at|pp=ata}}
 
 # {{lb|ga|intransitive}} [[swell]]
-#: {{ux|ga|Tá a héadan '''ataithe'''.|Her face is swollen.}}
-#: {{ux|ga|Tá mo lámh '''ataithe'''.|My hand is swollen.}}
+#* {{RQ:ga-Finck|II|11}}
+#*: ''tā ə h-ēdn̥ '''atī'''.''
+#*:: {{small|''conventional orthography:''}} {{l|ga||Tá a héadan '''ataithe'''.}}
+#*::: Her face is swollen.
+#* {{RQ:ga-Finck|II|11}}
+#*: ''tā mə lāv '''atī'''.''
+#*:: {{small|''conventional orthography:''}} {{l|ga||Tá mo lámh '''ataithe'''.}}
+#*::: My hand is swollen.
 # {{lb|ga|intransitive}} [[bloat]]
 # {{lb|ga|intransitive|of sea}} [[heave]]
 
@@ -446,7 +461,6 @@ From {{inh|ga|sga|attaid||swells, dilates, increases|pos=v}}, from {{m|sga|att||
 * {{R:DIL|4929|head=attaid}}
 * {{R:ga:Dinneen}}
 * {{R:ga:Dinneen|head=ataim}}
-* {{R:ga:Finck|II|11}}
 * {{R:ga:Ó Dónaill}}
 
 ----
