t+ga:[[aimicín]] t+ga:[[miocht]] t+sga:[[micht]] t-balance ([[WT:EDIT|Assisted]]) <amice#38784821>

--- a/en/a/amice.720080.wikitext
+++ b/en/a/amice.720080.wikitext
@@ -13,6 +13,8 @@
 ====Translations====
 {{trans-top|hood, or cape with a hood, formerly worn by the clergy}}
 * French: {{t+|fr|amict|m}}
+* Irish: {{t|ga|aimicín|m}}, {{t|ga|miocht|m}}
+*: Old Irish: {{t|sga|micht|m}}
 {{trans-mid}}
 * Portuguese: {{t+|pt|amicto|m}}
 {{trans-bottom}}
