t+it:[[amitto]] ([[WT:EDIT|Assisted]]) <amice#38784880>

--- a/en/a/amice.720080.wikitext
+++ b/en/a/amice.720080.wikitext
@@ -16,6 +16,7 @@
 * Irish: {{t|ga|aimicín|m}}, {{t|ga|miocht|m}}
 *: Old Irish: {{t|sga|micht|m}}
 {{trans-mid}}
+* Italian: {{t+|it|amitto|m}}
 * Portuguese: {{t+|pt|amicto|m}}
 {{trans-bottom}}
 
