/* Portuguese */ +EL <mundo#38847925>

--- a/en/m/mundo.4430.wikitext
+++ b/en/m/mundo.4430.wikitext
@@ -130,6 +130,9 @@ From {{inh|pt|roa-opt|mundo}}, from {{etyl|la|pt}} {{m|la|mundus||world}}.
 {{etymtree|pt|la|mundus}}
 {{der-bottom}}
 
+===External links===
+* {{R:DAN}}
+
 ----
 
 ==Spanish==
