--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -269,7 +269,7 @@ From {{etyl|enm|en}} {{m|enm|staf}}, from {{etyl|ang|en}} {{m|ang|stæf}}, from 
 ==Spanish==
 
 ===Noun===
-{{head|es|noun|g=m}}
+{{es-noun|m|-}}
 
 # {{l|en|staff}} {{gloss|employees}}
 
