--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -120,6 +120,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 *: Jawi: {{t|ms|توڤاي|sc=Arab}}, {{t|ms|باجيڠ|sc=Arab}}
 * Maltese: {{t|mt|skwiril|m}}
 * Manx: {{t|gv|fiorag|f}}
+* Maori: {{t|mi|kirera}}
 * Marathi: {{t|mr|खार|sc=Deva}}
 * Mongolian: {{t+|mn|хэрэм|sc=Cyrl}}
 * Nahuatl: {{t+|nah|mōtohtli}}
