--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -12,6 +12,9 @@ The verb comes from the supposed cunningness of the weasel.
 * {{audio|en-us-weasel.ogg|Audio (US)|lang=en}}
 * {{rhymes|iːzəl|lang=en}}
 
+===Alternative forms===
+* {{l|en|weazel}} 
+
 ===Noun===
 {{wikipedia}}
 {{en-noun}}
