rem generic assumption, no foundation for this claim <onesie#38874348>

--- a/en/o/onesie.741289.wikitext
+++ b/en/o/onesie.741289.wikitext
@@ -3,7 +3,7 @@
 [[Image:Baby.jpg|thumb|right|Baby wearing a '''onesie'''.]]
 
 ===Etymology===
-From the {{w|Gerber}} Childrenswear brand name {{w|Onesies}}. The name became [[generic]] and was reinterpreted as a plural, hence the new singular and [[decapitalize]]d "onesie".
+From the {{w|Gerber}} Childrenswear brand name {{w|Onesies}}.
 
 ===Pronunciation===
 * {{IPA|/ˈwʌn.zi/|lang=en}}
