t+ga:[[Balcáin]] t-balance ([[WT:EDIT|Assisted]]) <Balkans#38875242>

--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -47,9 +47,10 @@ Used with the definite article {{m|en|the}}.
 * Finnish: {{t+|fi|Balkan}}
 * French: {{t+|fr|Balkans|m}}
 * German: {{t+|de|Balkan|m}}
-{{trans-mid}}
 * Greek: {{t+|el|Βαλκάνια|n-p}}
+{{trans-mid}}
 * Hungarian: {{t+|hu|Balkán}}
+* Irish: {{t|ga|Balcáin|m-p|alt=Na Balcáin}}
 * Japanese: {{t|ja|バルカン半島|tr=[[Barukan hantō]]|sc=Jpan}}
 * Macedonian: {{t|mk|Балкан|m}}
 * Polish: {{t+|pl|Bałkany}}
