/* German */ Adjustments <rot#38877602>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -219,7 +219,7 @@ From {{der|fur|la|ruptus}}.
 From {{inh|de|gmh|rōt||red, red-haired}}, from {{inh|de|goh|rōt||red, scarlet, purple-red, brown-red, yellow-red}}, from {{inh|de|gem-pro|*raudaz}}, from {{inh|de|ine-pro|*h₁rowdʰós}}, from {{m|ine-pro|*h₁rewdʰ-}}. Compare {{etyl|nds|-}} {{m|nds|root}}, {{m|nds|rod}}, {{m|nds|rot}}, {{etyl|nl|-}} {{m|nl|rood}}, {{etyl|en|-}} {{m|en|red}}, {{etyl|fy|-}} {{m|fy|read}}, {{etyl|da|-}} {{m|da|rød}}.
 
 ===Pronunciation===
-* {{IPA|[ʁoːt]|lang=de}}
+* {{IPA|/roːt/|[ʁoːt(ʰ)]|[roːt]|lang=de}}
 * {{audio|De-rot.ogg|audio|lang=de}}
 * {{rhymes|oːt|lang=de}}
 
@@ -228,7 +228,7 @@ From {{inh|de|gmh|rōt||red, red-haired}}, from {{inh|de|goh|rōt||red, scarlet,
 
 # [[red]] {{gloss|colour}}
 # {{label|de|politics}} [[red]]; pertaining to [[Marxism]] in the widest sense; [[social democratic]]; [[socialist]]; [[communist]]
-# {{label|de|politics|Germany|in particular}} pertaining to the social democratic [[w:SPD|SPD]] or the more rigidly socialist [[w:The Left (Germany)|Linke]]
+## {{label|de|politics|Germany|in particular}} pertaining to the social democratic [[w:SPD|SPD]] or the more rigidly socialist [[w:The Left (Germany)|Linke]]
 # {{label|de|possibly mildly|_|offensive}} [[red-haired]]
 # {{label|de|historical|possibly offensive}} [[redskin]]; [[Native American]]; [[Indian]]
 
