--- a/en/r/Roemenië.4076.wikitext
+++ b/en/r/Roemenië.4076.wikitext
@@ -1,6 +1,7 @@
 ==Dutch==
 
 ===Pronunciation===
+* {{IPA|/ruˈmeː.ni.jə/|lang=nl}}
 * {{a|NL}} {{audio|Nl-Roemenië.ogg|audio|lang=nl}}
 
 ===Proper noun===
