--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -166,6 +166,17 @@ The translations below need to be checked by native speakers and inserted into t
 {{en-verb}}
 
 # {{label|en|transitive}} To [[flog]] with a bamboo [[cane]].
+#* '''1880''', {{w|Herbert Giles}} (translator), ''Strange Stories from a Chinese Studio'', London: Thomas de la Rue & Co., Vol. II, p. 18, footnote, [https://archive.org/details/strangestoriesfr02pusuuoft]
+#*: {{...}} the beadle is punished by fine, and sometimes '''bambooed''', if robberies are too frequent within his jurisdiction, or if he fails to secure the person of any malefactor particularly wanted by his superior officers.
+# {{label|en|transitive}} To [[paint]] (furniture, etc.) to give it the appearance of bamboo.
+#* '''1994''', Penny Swift, ''The Complete Book of Paint Techniques'', New Holland, p. 67, [https://books.google.ca/books?id=cmFDXcGa3PAC&q=%22bambooing%22&dq=%22bambooing%22&hl=en&sa=X&ved=0ahUKEwjQ5rSeqLrNAhUQ8GMKHbH6AOQQ6AEImAEwFw]
+#*: The craze for '''bambooing''' furniture and accessories was one of many popular paint techniques in the 18th century and early Victorian era.
+# {{lb|en|India|slang}} To penetrate sexually.
+#* '''2006''', [[w:Vikram Chandra (novelist)|Vikram Chandra]], ''Sacred Games'', Penguin, 2008, [https://books.google.ca/books?id=490VZPz-qQgC&printsec=frontcover#v=onepage&q&f=false]
+#*: If you're just a girl from Lucknow, with no fluid cash, you'll be just one more among thousands going from producer to producer by auto-rickshaw, and every photographer who agrees to take a picture for your portfolio will want to introduce you to his bed upstairs in the loft. And what you'll get out of all this in the end is a lot of '''bambooing''' and maybe a dance or two in his videos.
+#* '''2013''', Nandini Bhattacharya, ''Hindi Cinema: Repeating the Subject'', London: Routledge, Chapter 5, [https://books.google.ca/books?id=tkwZl-yAJSAC&printsec=frontcover#v=onepage&q&f=false]
+#*: One scene of attachment and intimacy shows Vijay careening into their shared apartment dead drunk and insulting a praying Ajay for his devotion to the household god, Hanuman {{...}}, saying that instead of being rescued Ajay will be "'''bamboo-ed'''," a popular slang for anal penetration.
+
 
 [[Category:en:Grasses]]
 
