--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -46,6 +46,8 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare Middle Dutch {{m|d
 # {{label|en|Cockney rhyming slang}} A [[laugh]]. (''also:'' [[bubble bath]])
 #: ''Are you having a '''bubble'''?!''
 # {{lb|en|computing}} Any of the small magnetized areas that make up [[bubble memory]].
+# {{lb|en|poker}} The point in a poker [[tournament]] when the last player without a prize loses all their [[chip]]s and leaves the game. (e.g., if the first 9 players win prizes, then the point when the 10th player leaves the tournament)
+#: ''Many players tend to play timidly (not play many hands) around the '''bubble''', to keep their chips and last longer in the game.''
 
 ====Synonyms====
 * (a laugh) [[giraffe]], [[bubble bath]]
