--- a/en/f/FM.26231.wikitext
+++ b/en/f/FM.26231.wikitext
@@ -15,9 +15,11 @@
 {{rfc-header|Initialism}}
 {{head|en|initialism}}
 
-# [[frequency modulation]]
+# {{initialism of|lang=en|frequency modulation}}
+# {{abbreviation of|lang=en|FM radio}}
 # [[field marshal]]
 # {{label|en|construction|insurance}} {{w|Factory Mutual}}
+# {{abbreviation of|lang=en|finance minister}}
 
 ===Anagrams===
 * {{l|en|MF}}, {{l|en|M-F}}
