--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -64,7 +64,7 @@ From the prefix {{m|en|mega-}}, from {{etyl|grc|en}} {{m|grc|μέγας||great, 
 ==Danish==
 
 ===Adverb===
-{{head|da|adverb}}
+{{da-adv}}
 
 # {{lb|da|informal}} {{l|en|very}}
 
