--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -144,6 +144,14 @@ Origin uncertain. Apparently representing {{etyl|ang|en}} {{m|ang||beonet-}} (at
 #* ''The Ballad of Chevy Chase''
 #*: Bowmen bickered upon the '''bent'''.
 
+====Synonyms====
+{{sense|grass}} [[bentgrass]]
+
+====Translations====
+{{trans-see|grass|nentgrass}}
+
+{{trans-see|area|grassland}}
+
 [[Category:English irregular past participles]]
 [[Category:English irregular simple past forms]]
 [[Category:en:LGBT]]
