/* Derived terms */ <bound#38922656>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -47,17 +47,16 @@ See [[bind]]
 * {{sense|logic: constrained by a quantifier}} {{l|en|free}}
 
 =====Derived terms=====
-{{top2}}
-* {{l|en|bound to}}
-* {{l|en|fogbound}}
-* {{l|en|I'll be bound}}
-* {{l|en|railbound}}
-{{mid2}}
-* {{l|en|snowbound}}
-* {{l|en|strikebound}}
-* {{l|en|weatherbound}}, {{l|en|weather-bound}}
-* {{l|en|wheelchair-bound}}, {{l|en|wheelchairbound}}
-{{bottom}}
+{{der3
+|{{l|en|bound to}}
+|{{l|en|fogbound}}
+|{{l|en|I'll be bound}}
+|{{l|en|railbound}}
+|{{l|en|snowbound}}
+|{{l|en|strikebound}}
+|{{l|en|weatherbound}}, {{l|en|weather-bound}}
+|{{l|en|wheelchair-bound}}, {{l|en|wheelchairbound}}
+}}
 
 =====Translations=====
 {{trans-top|obliged to}}
