--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -232,6 +232,7 @@ From {{etyl|fr|en}} {{m|fr|bondir||to leap, bound, originally make a loud resoun
 * Dutch: {{t+|nl|springen}}
 * Finnish: {{t|fi|hyppiä}}, {{t+|fi|hypähdellä}}
 * French: {{t+|fr|bondir}}, {{t+|fr|sauter}}
+* Irish: {{t|ga|preab}}
 {{trans-mid}}
 * Italian: {{t+|it|balzare}}
 * Portuguese: {{t+|pt|saltar}}
