--- a/en/m/mini.34065.wikitext
+++ b/en/m/mini.34065.wikitext
@@ -119,6 +119,22 @@ From {{inh|rup|la|mē}}, possibly through a {{inh|rup|VL.|}} root ''mēne'', or 
 
 ----
 
+==Hidatsa==
+
+===Alternative forms===
+* [[miri]], [[midi]] {{q|older forms}}
+
+===Noun===
+{{head|hid|noun}}
+
+# [[water]]
+
+===References===
+* Alfred W. Bowers, ''Hidatsa Social and Ceremonial Organization'' (1963, ISBN 0803260989): "miri" (but see also [http://www.native-languages.org/hidatsa_words.htm])
+* ''Ethnography and philology of the Hidatsa Indians, by W. Matthews'' (1877), noting "the interchangeability of certain lingual and labial sounds in the Hidatsa": "mini or midi"
+
+----
+
 ==Hungarian==
 
 ===Etymology===
