t+ur:[[بانس]] ([[WT:EDIT|Assisted]]) <bamboo#38941409>

--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -90,6 +90,7 @@
 * Tagalog: {{t|tl|kawayan}}
 * Thai: {{t+|th|ไผ่|tr=pài|sc=Thai}}
 * Tok Pisin: {{t|tpi|mambu}}
+* Urdu: {{t|ur|بانس|tr=bāns|sc=ur-Arab}}
 * Volapük: {{t+|vo|bambud}}, {{qualifier|obsolete}} {{t|vo|lerid}}
 * Waray-Waray: {{t|war|kawayan}}
 * Zhuang: {{t-needed|za}}
