t+ca:[[vectorial]] ([[WT:EDIT|Assisted]]) <vectorial#38945813>

--- a/en/v/vectorial.855963.wikitext
+++ b/en/v/vectorial.855963.wikitext
@@ -9,6 +9,7 @@
 
 ====Translations====
 {{trans-top|of or pertaining to a vector}}
+* Catalan: {{t|ca|vectorial}}
 * French: {{t+|fr|vectoriel}}
 * German: {{t|de|vektoriell}}
 * Italian: {{t+|it|vettoriale}}
