t+mnc:[[ᡠᠯᡤᡳᠶᠠᠨ]] ([[WT:EDIT|Assisted]]) <pig#38954206>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -230,6 +230,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Malayalam: {{t+|ml|പന്നി|sc=Mlym}}
 * Maltese: {{t|mt|ħanżir|m}}, {{t|mt|qażquż|m}}
 * Maléku Jaíka: {{t|gut|tunhífa}}
+* Manchu: {{t|mnc|ᡠᠯᡤᡳᠶᠠᠨ|tr=ulgiyan}}
 * Mandar: {{t|mdr|boe|sc=Bugi}}
 * Maori: {{t|mi|poaka}}
 * Marathi: {{t|mr|डुकर|m|sc=Deva}}
