--- a/en/a/abaco.4397.wikitext
+++ b/en/a/abaco.4397.wikitext
@@ -17,7 +17,7 @@
 From {{etyl|la|it}} {{m|la|abacus||counting board}}, from {{etyl|grc|it}} {{m|grc|ἄβαξ||board}}.
 
 ===Pronunciation===
-* {{IPA|/ˈa.ba.ko/|[ˈa.ba.ko̞]|lang=it}}
+* {{IPA|/ˈa.ba.ko/|[ˈäːbäko̞]|lang=it}}
 * {{hyphenation|à|ba|co|lang=it}}
 
 ===Noun===
