t+ka:[[გაღუნული]] ([[WT:EDIT|Assisted]]) <bent#38973265>

--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -49,7 +49,7 @@ From {{m|en|bend}}.
 * Esperanto: {{t-needed|eo}}
 * Finnish: {{t+|fi|taipunut}}, {{t|fi|taittunut}}
 * French: {{t+|fr|courbé}}
-* Georgian: {{t-needed|ka}}
+* Georgian: {{t|ka|გაღუნული|sc=Geor}}
 * German: {{t+|de|gebeugt}}
 * Hungarian: {{t+|hu|hajlott}}, {{t+|hu|görbe}}
 * Indonesian: {{t+|id|bengkok}}
