--- a/en/a/algebras.856057.wikitext
+++ b/en/a/algebras.856057.wikitext
@@ -12,7 +12,7 @@
 ===Noun===
 {{la-noun-form|algebrās}}
 
-# {{inflection of|algebra|11111|acc|p|lang=la}}
+# {{inflection of|algebra||acc|p|lang=la}}
 
 ----
 
