--- a/en/i/inefficacy.742113.wikitext
+++ b/en/i/inefficacy.742113.wikitext
@@ -10,7 +10,11 @@ From {{affix|en|in-|efficacy}}.
 
 ====Translations====
 {{trans-top|the condition of being ineffective}}
+* Irish: {{t|ga|ainéifeacht|f}}
+* Italian: {{t|it|inefficacia|f}}
 {{trans-mid}}
+* Manx: {{t|gv|neuvree|f}}
+* Scottish Gaelic: {{t|gd|mì-thairbhe|f}}
 {{trans-bottom}}
 
 [[et:inefficacy]]
