--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -93,9 +93,11 @@
 {{en-verb}}
 
 # To hunt [[game]] with ferrets.
-# To [[uncover]] and bring to [[light]] by [[searching]]; usually to ''ferret out''.
-#* Shakespeare
+# {{lb|en|ambitransitive}} To [[uncover]] and bring to [[light]] by [[searching]]; usually to ''ferret out''.
+#* William Shakespeare
 #*: Master Fer! I'll fer him, and firk him, and '''ferret''' him.
+#* '''1859''', Charles Dickens, ''A Tale of Two Cities''
+#*: I confess that we were so unpopular with the outrageous mob, that I only got away from England at the risk of being ducked to death, and that Cly was so '''ferreted''' up and down, that he never would have got away at all but for that sham.
 #* '''1922''', {{w|Virginia Woolf}}, ''{{w|Jacob's Room}}'' Chapter 1
 #*: She '''ferreted''' in her bag; then held it up mouth downwards; then fumbled in her lap, all so vigorously that Charles Steele in the Panama hat suspended his paint-brush.
 
