--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -35,7 +35,7 @@ From {{etyl|ang|en}} {{m|ang|oter}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*utraz
 {{trans-top|mammal}}
 * Albanian: {{t+|sq|lundërz|f}}
 * Algonquin: {{t|alq|nigig}}
-* Arabic: {{t|ar|ثَعْلَب المَاء|m}}
+* Arabic: {{t|ar|ثَعْلَب الْمَاء|m}}
 * Armenian: {{t+|hy|ջրասամույր}}
 * Asturian: {{t|ast|llóndriga|f}}, {{t|ast|llóndrigu|m}}
 * Azeri: {{t|az|susamuru}}
