t+ka:[[საუმი]] ([[WT:EDIT|Assisted]]) <sawm#39048512>

--- a/en/s/sawm.746803.wikitext
+++ b/en/s/sawm.746803.wikitext
@@ -23,6 +23,7 @@ From {{etyl|ar|en}} {{m|ar|صَوْم||fasting; abstaining from food, drink, and
 * Dhivehi: {{t|dv|ރޯދަ}}
 * Finnish: {{t|fi|saum}}
 * French: {{t|fr|saoum|m}}
+* Georgian: {{t|ka|საუმი|sc=Geor}}
 * German: {{t+|de|Saum}}
 * Indonesian: {{t+|id|puasa}}, {{t+|id|saum}}
 * Japanese: {{t|ja|サウム|tr=saumu|sc=Jpan}}
