--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -156,7 +156,7 @@ From {{inh|it|VL.||*(ec)cu hac}}, from {{inh|it|la|eccum}} + {{m|la|hac}}.
 Adverb declined from {{m|la|quī}}.
 
 ====Pronunciation====
-* {{IPA|[ kwa ]|lang=la}}
+* {{la-IPA}}
 
 ====Adverb====
 {{la-adv||quā|-}}
@@ -193,7 +193,7 @@ Inflection of {{m|la|quis||who?, what?}}.
 ==Min Nan==
 
 ===Pronunciation===
-* {{IPA|[ kuã˥˥ ]|lang=nan}}
+* {{IPA|[kuã˥˥]|lang=nan}}
 
 ===Etymology===
 The suffix has been used since around the 17th and 18th century. It is most likely an early attempt at Romanizing the Min Nan for [[官]] (POJ: [[koaⁿ]]) ''official''. Since "[[hong]]" ([[行]]) merchants were technically officials of the lowest (9th) rank, the suffix "qua" was added to their names in honour of their positions in the [[w:Qing Dynasty|Qing]] government.
