t+yi:[[בייגן]] ([[WT:EDIT|Assisted]]) <bend#39065157>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -120,6 +120,7 @@ From {{etyl|enm|en}} {{m|enm|benden}}, from {{etyl|ang|en}} {{m|ang|bendan||to b
 * Ukrainian: {{t|uk|згина́ти|impf|sc=Cyrl}}, {{t|uk|гну́ти|impf|sc=Cyrl}}
 * Vietnamese: {{t+|vi|uốn cong}}
 * Walloon: {{t+|wa|ployî}}
+* Yiddish: {{t|yi|בייגן}}
 {{trans-bottom}}
 
 {{trans-top|to become curved}}
@@ -141,6 +142,7 @@ From {{etyl|enm|en}} {{m|enm|benden}}, from {{etyl|ang|en}} {{m|ang|bendan||to b
 * Swedish: {{t+|sv|böja}}, {{t+|sv|krokna}}
 * Turkish: {{t+|tr|bükmek}}
 * Walloon: {{t+|wa|ployî}}, {{t+|wa|verdjî}}
+* Yiddish: {{t|yi|בייגן|alt=בייגן זיך}}
 {{trans-bottom}}
 
 {{trans-top|to cause to change direction}}
