t+yi:[[בייגיק]] t+yi:[[בויגיק]] ([[WT:EDIT|Assisted]]) <bent#39065194>

--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -67,6 +67,7 @@ From {{m|en|bend}}.
 * Swedish: {{t+|sv|böjd}}
 * Thai: {{t-needed|th}}
 * Vietnamese: {{t-needed|vi}}
+* Yiddish: {{t|yi|בייגיק}}, {{t|yi|בויגיק}}
 {{trans-bottom}}
 
 {{trans-top|Homosexual}}
