--- a/en/q/quadruped.4320.wikitext
+++ b/en/q/quadruped.4320.wikitext
@@ -16,25 +16,25 @@
 {{trans-top|a four-footed or four-legged animal}}
 * Armenian: {{t+|hy|չորքոտանի}}
 * Chinese:
-*: Mandarin: {{t|cmn|四足動物|sc=Hani}}, {{t|cmn|四足动物|tr=sìzú dòngwù|sc=Hani}} {{qualifier|animal}}, {{t|cmn|四足類|sc=Hani}}, {{t|cmn|四足类|tr=sìzúlèi|sc=Hani}}
+*: Mandarin: {{t|cmn|四足動物}}, {{t|cmn|四足动物|tr=sìzú dòngwù}} {{qualifier|animal}}, {{t|cmn|四足類}}, {{t|cmn|四足类|tr=sìzúlèi}}
 * Danish: {{t|da|[[firbenet]] [[dyr]]}}
 * Dutch: {{t|nl|viervoeter|m}}
 * Finnish: {{t|fi|nelijalkainen}}
 * French: {{t+|fr|quadrupède|m}}, {{t+|fr|tétrapode|m}}
 * German: {{t|de|Vierfüßer|m}}, {{t|de|Vierfüßerin|f}}, {{t|de|Vierfüßler|m}}, {{t|de|Vierfüßlerin|f}}, {{t|de|Quadrupeder|m}}, {{t|de|Quadrupede|f}}
 * Icelandic: {{t|is|ferfætlingur|m}}
-* Japanese: {{t|ja|四肢動物|tr=ししどうぶつ, shishi dōbutsu|sc=Jpan}}
+* Japanese: {{t|ja|四肢動物|tr=ししどうぶつ, shishi dōbutsu}}
 * Maori: {{t|mi|kīrehe}}
 {{trans-mid}}
 * Navajo: {{t|nv|naaldlooshii}}
 * Polish: {{t+|pl|czworonóg|m-an}}
 * Portuguese: {{t+|pt|quadrúpede|m}}
 * Russian: {{t+|ru|четвероногий|n|alt=четвероно́гое}} {{qualifier|живо́тное}}, {{t+|ru|тетрапо́д|m|tr=tɛtrapód}}
-* Sanskrit: {{t+|sa|चतुष्पद्|m|n|sc=Deva}}
+* Sanskrit: {{t+|sa|चतुष्पद्|m|n}}
 * Spanish: {{t+|es|cuadrúpedo|m}}, {{t|es|tetrápodo|m}}
 * Swedish: {{t|sv|fyrfotadjur|n}}, {{t|sv|tetrapod|c}}, {{t|sv|fyrfoting|c}}
 * Tagalog: {{t|tl|hayop na aapating-paa}}
-* Telugu: {{t+|te|చతుష్పదము|tr=chatush-padamu}}
+* Telugu: {{t+|te|చతుష్పదము}}
 * Tocharian B: {{t|txb|śwerppewä}}
 * Volapük: {{qualifier|♂♀}} {{t+|vo|folfutaf}}, {{qualifier|♂}} {{t|vo|hifolfutaf}}, {{qualifier|♀}} {{t|vo|jifolfutaf}}, {{qualifier|♂♀}} {{t+|vo|follögaf}}, {{qualifier|♂}} {{t|vo|hifollögaf}}, {{qualifier|♀}} {{t|vo|jifollögaf}}
 {{trans-bottom}}
