--- a/en/m/mini.34065.wikitext
+++ b/en/m/mini.34065.wikitext
@@ -234,6 +234,18 @@ From {{etyl|en|hu}} {{m|en|mini}}.<ref>{{R:Eory 2007}}</ref>
 
 # {{l|en|mini}}
 
+----
+
+==Tsuvadi==
+
+===Noun===
+{{head|tvd|noun}}
+
+# [[water]]
+
+===Reference===
+* ''[//www.sil.org/acpub/repository/WL_Kambari_Raha_Azozo.pdf Kambari survey entry 2 - Scanned Wordlist Files: Kambari of Niger and Kebbi states, Nigeria]'', page 10
+
 [[af:mini]]
 [[ar:mini]]
 [[ca:mini]]
