--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -237,7 +237,7 @@ From {{etyl|enm|en}} {{m|enm|simple}}, from {{etyl|fro|en}} and {{etyl|fr|en}} {
 * West Frisian: {{t+|fy|ienfâldich}}
 * Wolof: {{t-needed|wo}}
 * Xhosa: {{t-needed|xh}}
-* Yiddish: {{t-needed|yi}}
+* Yiddish: {{t|yi|פּשוט|tr=poshet}}
 * Yoruba: {{t-needed|yo}}
 * Zulu: {{t-needed|zu}}
 {{trans-bottom}}
