--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -87,7 +87,7 @@ From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{et
 * Dena'ina: {{t|tfn|hvaya}}
 * Dutch: {{t+|nl|konijn|n}}, {{t+|nl|rob|f}}
 * Eastern Arrernte: {{t-needed|aer}}
-* Esperanto: {{qualifier|♂}} {{t|eo|kuniklo}}, {{qualifier|♀}} {{t|eo|kuniklino}}, {{qualifier|}} {{t|eo|kuniklido}}, {{qualifier|♀}} {{t|eo|kuniklidino}}
+* Esperanto: {{qualifier|♂}} {{t|eo|kuniklo}}, {{qualifier|♀}} {{t|eo|kuniklino}}, {{qualifier|♂}} {{t|eo|kuniklido}}, {{qualifier|♀}} {{t|eo|kuniklidino}}
 * Estonian: {{t|et|küülik}}
 * Ewe: {{t|ee|fɔmizi}}
 * Faroese: {{t|fo|kanin}}
