--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -87,7 +87,7 @@ From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{et
 * Dena'ina: {{t|tfn|hvaya}}
 * Dutch: {{t+|nl|konijn|n}}, {{t+|nl|rob|f}}
 * Eastern Arrernte: {{t-needed|aer}}
-* Esperanto: {{qualifier|♂}} {{t|eo|kuniklo}}, {{qualifier|♀}} {{t|eo|kuniklino}}, {{qualifier|♂}} {{t|eo|kuniklido}}, {{qualifier|♀}} {{t|eo|kuniklidino}}
+* Esperanto: {{t|eo|kuniklo}}
 * Estonian: {{t|et|küülik}}
 * Ewe: {{t|ee|fɔmizi}}
 * Faroese: {{t|fo|kanin}}
@@ -106,7 +106,7 @@ From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{et
 * Hopi: {{t|hop|taavo}}
 * Hungarian: {{t+|hu|nyúl}}
 * Icelandic: {{t+|is|kanína}}
-* Ido: {{qualifier|♂♀}} {{t+|io|kuniklo}}, {{qualifier|♂}} {{t|io|kuniklulo}}, {{qualifier|♀}} {{t|io|kuniklino}}, {{qualifier|♂♀ offspring}} {{t|io|kuniklyuno}}, {{qualifier|♂ offspring}} {{t|io|kuniklyunulo}}, {{qualifier|♀ offspring}} {{t|io|kuniklyunino}}, {{qualifier|diminutive ♂♀}} {{t|io|kunikleto}}
+* Ido: {{t+|io|kuniklo}}
 * Indonesian: {{t+|id|kelinci}}
 * Interlingua: {{t|ia|conilio}}
 * Interlingue: {{t|ie|cunicul}}
@@ -209,7 +209,7 @@ From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{et
 * Venetian: {{t|vec|cunicio|m}}
 * Vietnamese: {{t+|vi|thỏ}}
 * Vilamovian: {{t|wym|kyngel|m}}
-* Volapük: {{qualifier|♂♀}} {{t+|vo|krolig}}, {{qualifier|♂}} {{t+|vo|hikrolig}}, {{qualifier|♀}} {{t+|vo|jikrolig}}, {{qualifier|♂♀ offspring}} {{t|vo|kroligül}}, {{qualifier|♂ offspring}} {{t|vo|hikroligül}}, {{qualifier|♀ offspring}} {{t|vo|jikroligül}}, {{qualifier|diminutive ♂♀}} {{t|vo|kroligil}}, {{qualifier|diminutive ♂}} {{t|vo|hikroligil}}, {{qualifier|diminutive ♀}} {{t|vo|jikroligil}}
+* Volapük: {{t+|vo|krolig}}
 * Voro: {{t|vor|jänes}}
 * Votic: {{t|vot|jänez}}
 * Warlpiri: {{t|wbp|yurapiti}}
