--- a/en/a/aanbidden.4464.wikitext
+++ b/en/a/aanbidden.4464.wikitext
@@ -10,7 +10,7 @@ From {{affix|nl|aan-|bidden}}.
 ===Verb===
 {{nl-verb|aanbad|aanbeden}}
 
-# to [[worship]], to [[adore]]
+# {{lb|nl|transitive}} to [[worship]], to [[adore]]
 
 ====Conjugation====
 {{nl-conj-st|class=5|pref=aan|bid|bad|beden|bidde|bade|baadt}}
