/* Pronunciation */ Bullet <at#39213872>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -507,7 +507,7 @@ From {{der|lld|la|actus}}.
 ==Norwegian Bokmål==
 
 ===Pronunciation===
-{{IPA|/ɑt/|lang=nb}}
+* {{IPA|/ɑt/|lang=nb}}
 
 ===Conjunction===
 {{head|nb|conjunction}}
