--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -61,6 +61,7 @@ From {{etyl|enm|en}} {{m|enm|plege}}, from {{etyl|xno|en}} {{m|fro|plege}}, from
 * Dutch: {{t+|nl|verpanden}}
 * Finnish: {{t+|fi|pantata}}
 * French: {{t|fr|mettre en gage}}
+* Galician: {{t+|gl|gravecer}}, {{t+|gl|engaxar}}, {{t+|gl|piñorar}}
 * German: {{t+|de|verpfänden}}
 * Latgalian: {{t|ltg|aizlyka}}
 * Latvian: {{t|lv|ķīla}}
