--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -32,6 +32,7 @@ From {{etyl|enm|en}} {{m|enm|plege}}, from {{etyl|xno|en}} {{m|fro|plege}}, from
 * Dutch: {{t|nl|plechtig beloven}}
 * Finnish: {{t+|fi|luvata}}, {{t+|fi|sitoutua}}
 * French: {{t+|fr|promettre}}
+* Galician: {{t+|gl|estocar}}, {{t+|gl|prometer}}
 * German: {{t|de|zusichern}}, {{t+|de|versprechen}}
 * Hebrew: {{t|he|נשבע|tr=nishbá|sc=Hebr}}
 * Icelandic: {{t-needed|is}}
