--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -65,7 +65,7 @@ From {{etyl|la|en}} {{m|la|minimum}}, neuter form of {{m|la|minimus||least, smal
 * Latin: {{t|la|minimum}}
 * Persian: {{t+|fa|حداقل|tr=hadd-e-aqall|sc=fa-Arab}}, {{t|fa|مینیمم|tr=minimom|sc=fa-Arab}}
 * Portuguese: {{t+|pt|mínimo|m}}
-* Romanian: {{t+|ro|minimum}}
+* Romanian: {{t+|ro|minimum}}, {{t+|ro|minim|n}}
 * Russian: {{t+|ru|ми́нимум|m}}
 * Spanish: {{t+|es|mínimo}}
 * Swedish: {{t+|sv|minimum|n}}
