--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -399,7 +399,7 @@ From {{der|fur|la|actus}}; cf. Italian {{m|it|atto}}.
 From {{inh|ga|sga|att||swelling, protuberance, tumour}}.
 
 ====Noun====
-{{head|ga|noun|g=m|genitive as substantive|ait|genitive as verbal noun|ata|plural|atanna}}
+{{ga-noun|g=m|ait|~anna|vngen=~a}}
 
 # [[swelling]]
 #* {{RQ:ga-Finck|II|11}}
@@ -423,7 +423,7 @@ From {{inh|ga|sga|att||swelling, protuberance, tumour}}.
 From {{inh|ga|sga|attaid||swells, dilates, increases|pos=v}}, from {{m|sga|att||swelling, protuberance, tumour}}.
 
 ====Verb====
-{{ga-verb|pres=atann|fut=atfaidh|vn=at|pp=ata}}
+{{ga-verb|pres=~ann|fut=~faidh|vn=~|pp=ata}}
 
 # {{lb|ga|intransitive}} [[swell]]
 #* {{RQ:ga-Finck|II|11}}
