--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -33,13 +33,13 @@
 *: Egyptian Arabic: {{t|arz|خيزران|m|tr=xayzaran|sc=Arab}}, {{t|arz|بامبو|m|tr=bambu|sc=Arab}}
 * Asturian: {{t|ast|bambú|m}}
 * Banjarese: {{t|bjn|buluh}}, {{t|bjn|paring}}
-* Bengali: {{t|bn|বাঁশ|tr=bãsh|sc=Beng}}
+* Bengali: {{t|bn|বাঁশ|sc=Beng}}
 * Bulgarian: {{t|bg|бамбу́к|m}}
 * Burmese: {{t+|my|ဝါး|sc=Mymr}}
 * Catalan: {{t+|ca|bambú|m}}
 * Chinese:
 *: Mandarin: {{t+|cmn|竹子|tr=zhúzi|sc=Hani}}
-*: Min Dong: {{t|cdo|竹|tr=doik|sc=Hani}}
+*: Min Dong: {{t|cdo|竹|tr=dé̤ṳk|sc=Hani}}
 *: Min Nan: {{t+|nan|竹仔|tr=tek-á|sc=Hani}}
 * Czech: {{t+|cs|bambus|m}}
 * Danish: {{t|da|bambus|c}}
@@ -52,13 +52,13 @@
 * German: {{t+|de|Bambus|m}}
 * Greek: {{t+|el|μπαμπού|n|sc=Grek}}
 * Hawaiian: {{t|haw|ʻohe}}
-* Hebrew: {{t+|he|במבוק|m|tr=bambuq}}
-* Hindi: {{t|hi|बांस|tr=bāns|sc=Deva}}
+* Hebrew: {{t+|he|בַּמְבּוּק|m|tr=bambuk}}
+* Hindi: {{t|hi|बांस|sc=Deva}}
 * Hungarian: {{t+|hu|bambusz}}
 * Indonesian: {{t+|id|buluh}}, {{t+|id|bambu}}, {{t+|id|aur}}
 * Isan: {{t-needed|tts}}
 * Italian: {{t+|it|bambù|m}}
-* Japanese: {{t+|ja|竹|tr=[[たけ]], take|sc=Jpan}}
+* Japanese: {{t+|ja|竹|tr=たけ, take|sc=Jpan}}
 {{trans-mid}}
 * Kannada: {{t+|kn|ಬಿದಿರು|sc=Knda}}
 * Khmer: {{t+|km|ឫស្សី|tr=rɨhsəy|sc=Khmr}}
@@ -79,7 +79,8 @@
 * Portuguese: {{t+|pt|bambu|m}}
 * Romanian: {{t+|ro|bambus|m}}, {{t|ro|bambu|m}}
 * Russian: {{t+|ru|бамбу́к|m}}
-* Serbo-Croatian: {{t+|sh|trskovača|f}}
+* Serbo-Croatian:
+*: Roman: {{t+|sh|trskovača|f}}
 * Shan: {{t-needed|shn}}
 * Slovak: {{t|sk|bambus|m}}
 * Slovene: {{t+|sl|bambus|m}}
@@ -88,7 +89,7 @@
 * Swahili: {{t|sw|mwanzi}}
 * Swedish: {{t+|sv|bambu|c}}
 * Tagalog: {{t|tl|kawayan}}
-* Thai: {{t+|th|ไผ่|tr=pài|sc=Thai}}
+* Thai: {{t+|th|ไผ่|sc=Thai}}
 * Tok Pisin: {{t|tpi|mambu}}
 * Urdu: {{t|ur|بانس|tr=bāns|sc=ur-Arab}}
 * Volapük: {{t+|vo|bambud}}, {{qualifier|obsolete}} {{t|vo|lerid}}
