t+uk:[[бамбук]] t+be:[[бамбук]] t+et:[[bambus]] t+lv:[[bambuss]] t+lt:[[bambukas]] t-balance t+vi:[[tre]] t+vi:[[trúc]] t+is:[[bambus]] t+nb:[[bambus]] t+fa:[[خیزران]] ([[WT:EDIT|Assisted]]) <bamboo#39366315>

--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -33,6 +33,7 @@
 *: Egyptian Arabic: {{t|arz|خيزران|m|tr=xayzaran|sc=Arab}}, {{t|arz|بامبو|m|tr=bambu|sc=Arab}}
 * Asturian: {{t|ast|bambú|m}}
 * Banjarese: {{t|bjn|buluh}}, {{t|bjn|paring}}
+* Belarusian: {{t|be|бамбу́к|m|sc=Cyrl}}
 * Bengali: {{t|bn|বাঁশ|sc=Beng}}
 * Bulgarian: {{t|bg|бамбу́к|m}}
 * Burmese: {{t+|my|ဝါး|sc=Mymr}}
@@ -45,6 +46,7 @@
 * Danish: {{t|da|bambus|c}}
 * Dutch: {{t+|nl|bamboe|n}}
 * Esperanto: {{t|eo|bambuo}}
+* Estonian: {{t+|et|bambus}}
 * Faroese: {{t|fo|bambus|n}}
 * Finnish: {{t+|fi|bambu}}
 * French: {{t+|fr|bambou|m}}
@@ -55,17 +57,20 @@
 * Hebrew: {{t+|he|בַּמְבּוּק|m|tr=bambuk}}
 * Hindi: {{t|hi|बांस|sc=Deva}}
 * Hungarian: {{t+|hu|bambusz}}
+* Icelandic: {{t|is|bambus|m}}
 * Indonesian: {{t+|id|buluh}}, {{t+|id|bambu}}, {{t+|id|aur}}
 * Isan: {{t-needed|tts}}
 * Italian: {{t+|it|bambù|m}}
 * Japanese: {{t+|ja|竹|tr=たけ, take|sc=Jpan}}
-{{trans-mid}}
 * Kannada: {{t+|kn|ಬಿದಿರು|sc=Knda}}
 * Khmer: {{t+|km|ឫស្សី|tr=rɨhsəy|sc=Khmr}}
 * Korean: {{t+|ko|대나무|sc=Kore}}
+{{trans-mid}}
 * Kyrgyz: {{t+|ky|бамбук|m|sc=Cyrl}}
 * Lao: {{t|lo|ໄມ້ໄຜ່|sc=Laoo}}
 * Latin: {{t|la|harundō Indica|f}}
+* Latvian: {{t|lv|bambuss|m}}
+* Lithuanian: {{t|lt|bambukas|m}}
 * Lü: {{t|khb|ᦺᦙᧉᦌᦱᧂ|sc=Talu}}
 * Macedonian: {{t|mk|бамбус|m}}
 * Malay: {{t|ms|pering}}
@@ -76,6 +81,9 @@
 * Navajo: {{t|nv|lókʼaatsoh}}
 * Norman: {{t|nrf|bambou|m}}
 * Northern Thai: {{t-needed|nod}}
+* Norwegian:
+*: Bokmål: {{t|nb|bambus|m}}
+* Persian: {{t+|fa|خیزران|tr=xayzarân|sc=fa-Arab}}
 * Portuguese: {{t+|pt|bambu|m}}
 * Romanian: {{t+|ro|bambus|m}}, {{t|ro|bambu|m}}
 * Russian: {{t+|ru|бамбу́к|m}}
@@ -91,7 +99,9 @@
 * Tagalog: {{t|tl|kawayan}}
 * Thai: {{t+|th|ไผ่|sc=Thai}}
 * Tok Pisin: {{t|tpi|mambu}}
+* Ukrainian: {{t+|uk|бамбу́к|m|sc=Cyrl}}
 * Urdu: {{t|ur|بانس|tr=bāns|sc=ur-Arab}}
+* Vietnamese: {{t+|vi|tre}}, {{t+|vi|trúc}}
 * Volapük: {{t+|vo|bambud}}, {{qualifier|obsolete}} {{t|vo|lerid}}
 * Waray-Waray: {{t|war|kawayan}}
 * Zhuang: {{t-needed|za}}
