/* Translations */ correction <staff#39567307>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -59,7 +59,7 @@ From {{etyl|enm|en}} {{m|enm|staf}}, from {{etyl|ang|en}} {{m|ang|stæf}}, from 
 * {{l|en|vine staff}}
 
 ====Translations====
-{{trans-top|long, straight stick}}
+{{trans-top|long, straight, thick rod or stick}}
 * Armenian: {{t+|hy|ցուպ}}, {{t+|hy|ձեռնափայտ}}, {{t+|hy|գավազան}}
 * Basque: {{t|eu|haga}}
 * Catalan: {{t+|ca|bastó|m}}
