===Noun=== {{en-noun}}  # An [[application]] of [[marl]] to the [[soil]], to aid [[agriculture]]. <marling#39573590>

--- a/en/m/marling.746943.wikitext
+++ b/en/m/marling.746943.wikitext
@@ -5,6 +5,11 @@
 
 # {{present participle of|marl|lang=en|nocat=1}}
 
+===Noun===
+{{en-noun}}
+
+# An [[application]] of [[marl]] to the [[soil]], to aid [[agriculture]].
+
 [[de:marling]]
 [[fr:marling]]
 [[zh:marling]]
