--- a/en/p/promos.746869.wikitext
+++ b/en/p/promos.746869.wikitext
@@ -4,6 +4,13 @@
 {{head|en|noun plural form}}
 
 # {{plural of|promo|lang=en}}
+----
+==Spanish==
+
+===Noun===
+{{head|es|noun form}}
+
+# {{plural of|promo|lang=es}}
 
 [[ar:promos]]
 [[fr:promos]]
