t+la:[[septum nasi]] ([[WT:EDIT|Assisted]]) <nasal septum#39597322>

--- a/en/n/nasal septum.803472.wikitext
+++ b/en/n/nasal septum.803472.wikitext
@@ -28,6 +28,7 @@
 {{trans-mid}}
 * Italian: {{t+|it|setto|m}}
 * Japanese: {{t|ja|鼻中隔|tr=bichūkaku|sc=Jpan}}
+* Latin: {{t|la|septum nasi|n}}
 * Low German:
 *: German Low German: {{t|nds-de|neestwüschenwand}}
 * Maori: {{t|mi|taunga}}
