--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -16,7 +16,7 @@ From {{etyl|enm|en}} {{m|enm|coppe}}, from {{etyl|ang|en}} {{m|ang|*coppe}}, as 
 # {{lb|en|obsolete}} A [[spider]].
 
 ===Etymology 2===
-Possibly from {{etyl|frm|en}} {{m|frm|caper||to capture}}, from {{etyl|la|en}} {{m|la|capio|capere|to seize, to grasp}}; or possibly from {{etyl|nl|en}} {{m|nl|kapen||to seize, to hijack}}, from {{etyl|fy|en}} {{m|fy|kapia||to take away}}, from {{etyl|ofs|en}} {{m|ofs|kapia||to buy}}.
+Uncertain. Perhaps from {{inh|en|ang|copian||to plunder; pillage; steal}}; or possibly from {{etyl|frm|en}} {{m|frm|caper||to capture}}, from {{etyl|la|en}} {{m|la|capio|capere|to seize, to grasp}}; or possibly from {{etyl|nl|en}} {{m|nl|kapen||to seize, to hijack}}, from {{etyl|fy|en}} {{m|fy|kapia||to take away}}, from {{etyl|ofs|en}} {{m|ofs|kapia||to buy}}. Compare also Middle English {{m|enm|copen||to buy}}, from Middle Dutch {{m|dum|copen}}.
 
 ====Verb====
 {{en-verb|copp}}
