--- a/en/m/Monsignor.720231.wikitext
+++ b/en/m/Monsignor.720231.wikitext
@@ -12,7 +12,7 @@ From {{etyl|it|en}} {{m|it|monsignore}}, from {{etyl|fr|en}} {{m|fr|monseigneur}
 {{wikipedia}}
 {{en-noun|Monsignori}}
 
-# An [[ecclesiastic]] [[title]] bestowed on some [[Roman Catholic]] [[cleric]]s by the [[Pope]]
+# {{n-g|An [[ecclesiastic]] [[title]] bestowed on some [[Roman Catholic]] [[cleric]]s by the [[Pope]]|lang=en}}
 
 ====Related terms====
 * ''Abbreviation'': [[Msgr.]] or [[Mons.]]
