/* Latin */ Remove inflection table, to be consistent with parvus/parvi and others. <multi#39627805>

--- a/en/m/multi.34076.wikitext
+++ b/en/m/multi.34076.wikitext
@@ -81,12 +81,12 @@ Shortened from {{m|hu|multinacionális}} {{m|hu|vállalat||multinational company
 # [[many]]
 
 ===Adjective===
-{{la-adj-1&2|multī|multa|multum}}
+{{la-adj-form|multī}}
 
-# [[much]], [[many]]
-
-====Inflection====
-{{la-decl-1&2|mult|num=pl}}
+# {{inflection of|multus||gen|m||s|lang=la}}
+# {{inflection of|multus||nom|m||p|lang=la}}
+# {{inflection of|multus||voc|m||p|lang=la}}
+# {{inflection of|multus||gen|n||s|lang=la}}
 
 ===References===
 * {{R:Gaffiot}}
