/* Etymology */ Inscription given and template <at#39628372>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -757,7 +757,7 @@ From {{etyl|en|tcs}} {{m|en|heart}}.
 ==Turkish==
 
 ===Etymology===
-From {{etyl|otk|tr}} ''at'', from {{etyl|trk-pro|tr}} {{m|trk-pro|*at}}, {{m|trk-pro|*ăt||horse}}.
+From {{der|tr|otk|𐱃|tr=at}}, from {{inh|tr|trk-pro|*at}}, {{m|trk-pro|*ăt||horse}}.
 
 ===Pronunciation===
 * {{IPA|/ät̪/|lang=tr}}
