/* Etymology */ Inscription given and template <at#39628374>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -259,7 +259,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 ==Azeri==
 
 ===Etymology===
-From {{etyl|otk|az}} ''at'', from {{etyl|trk-pro|az}} {{m|trk-pro|*at}}, {{m|trk-pro|*ăt||horse}}.
+From {{der|az|otk|𐱃|tr=at}}, from {{inh|az|trk-pro|*at}}, {{m|trk-pro|*ăt||horse}}.
 
 ===Noun===
 {{az-variant|c=ат|r=at|a=آت}}
