/* Turkmen */ Template and inscription <at#39628389>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -793,7 +793,7 @@ From {{der|tr|otk|𐱃|tr=at}}, from {{inh|tr|trk-pro|*at}}, {{m|trk-pro|*ăt||h
 ==Turkmen==
 
 ===Etymology 1===
-From {{etyl|otk|tk}} ''at'', from {{etyl|trk-pro|tk}} {{m|trk-pro|*at}}, {{m|trk-pro|*ăt||horse}}.
+From {{der|tk|otk|𐱃|tr=at}}, from {{inh|tk|trk-pro|*at}}, {{m|trk-pro|*ăt||horse}}.
 
 ====Pronunciation====
 * {{IPA|/at/|lang=tk}}
@@ -807,7 +807,7 @@ From {{etyl|otk|tk}} ''at'', from {{etyl|trk-pro|tk}} {{m|trk-pro|*at}}, {{m|trk
 {{tk-decl-noun-man|at|atlar|ady|atlary|adyň|atlaryň|ada|atlara|atda|atlarda|atdan|atlardan}}
 
 ===Etymology 2===
-From {{etyl|otk|tk}} ''āt'' (“name”), from {{etyl|trk-pro|tk}} {{m|trk-pro|*āt}}.
+From {{der|tk|otk|𐰀𐱃|tr=āt||name}}, {{m|otk|𐱃|tr=at||name}}, from {{inh|tk|trk-pro|*āt}} (compare {{cog|cv|ят||name}}).
 
 ====Pronunciation====
 * {{IPA|/aːt/|lang=tk}}
