/* Synonyms */ <American English#39742469>

--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -15,6 +15,7 @@
 
 ====Synonyms====
 * {{sense|English of North America}} {{l|en|North American English}}
+* {{l|en|AmE}}
 
 ====Related terms====
 * {{l|en|British English}}
