--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -12,7 +12,7 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 * {{audio|en-us-whistle.ogg|Audio (US)|lang=en}}
 
 ===Noun===
-{{en-noun}}
+{{en-noun|~}}
 
 # {{senseid|en|device}} A device designed to be placed in the mouth in order, or driven by steam or otherwise, to make a whistling sound.
 # An act of whistling.
