/* Derived terms */ <staff#39829413>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -57,6 +57,7 @@ From {{etyl|enm|en}} {{m|enm|staf}}, from {{etyl|ang|en}} {{m|ang|stæf}}, from 
 |ground staff
 |member of staff
 |quarterstaff
+|staffroom
 |staff sergeant
 |staff sling
 |vine staff
